<resources>
    <string name="app_name">TestApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard">Dashboard</string>
    <string name="options">Options</string>
    <string name="store_owner">Store owner</string>
    <string name="shop_profile">Shop Profile</string>
    <string name="subscription">Subscription</string>
    <string name="cashier">Cashier</string>
    <string name="manage_loaners">Manage loaners</string>
    <string name="list_of_items">List of items</string>
    <string name="print_last_receipt">Print last receipt</string>
    <string name="it_is_advised_to_sync_at_least_once_per_week">It is advised to sync at least once per week</string>
    <string name="log_out">Log out</string>
    <string name="synchronize">Synchronize</string>
    <string name="add_cashier">Add cashier</string>
    <string name="cashiertxt">Cashiers</string>
    <string name="your_current_plan_basic">Your current plan : <font color="#000000" ><b>Basic</b></font></string>
    <string name="_500"><font color="red">-500 ₸</font></string>
    <string name="formatted_string">%s ₸</string>
    <string name="_500s">-500</string>
    <string name="price">Price: <font color="#009EE1" ><b>150 ₸</b></font>\u00A0\u00A0\u00A0➜\u00A0\u00A0\u00A0<font color="#00A410"><b>200 ₸</b></font> </string>
    <string name="stock">Stock:\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0<font color="#2D8C00" ><b>100</b></font></string>
    <string name="profit">Profit:\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0\u00A0<font color="green" ><b>33.3 %</b></font></string>
    <string name="unit_type">Unit type:\u00A0\u00A0\u00A0\u00A0\u00A0 pcs</string>

    <string-array name="delivers">
        <item>Daimler AG</item>
        <item>Daimler AB</item>
        <item>Daimler CD</item>
        <item>Daimler CC</item>
        <item>Daimler DD</item>
        <item>Daimler AV</item>
        <item>Daimler VC</item>
        <item>Daimler SX</item>
    </string-array>



    <string-array name="pcs">
        <item>pcs</item>
        <item>kg</item>
        <item>m</item>
        <item>cm</item>
        <item>g</item>
    </string-array>

    <string-array name="categories">
        <item>Drinks</item>
        <item>Snacks</item>
        <item>Desserts</item>
        <item>Entrees</item>
        <item>Appetizers</item>
    </string-array>



</resources>