<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f5f5f5"
    android:orientation="vertical"
    tools:context=".screens.OptionsFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="11dp"
            android:fontFamily="@font/inter_semi_bol"
            android:text="@string/store_owner"
            android:textColor="#4E4D4D"
            android:textSize="17sp" />

        <LinearLayout
            android:id="@+id/btnShopProfile"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:background="@drawable/rectangle_ripple"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingHorizontal="17dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:src="@drawable/ic_shop" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/inter_regular"
                android:text="@string/shop_profile"
                android:textColor="@color/black"
                android:textSize="17sp" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="9dp"
                android:src="@drawable/ic_arrow" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnSubscription"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:background="@drawable/rectangle_ripple"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingHorizontal="17dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:src="@drawable/ic_subscription" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/inter_regular"
                android:text="@string/subscription"
                android:textColor="@color/black"
                android:textSize="17sp" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="9dp"
                android:src="@drawable/ic_arrow" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="18dp"
            android:layout_marginTop="22dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/inter_semi_bol"
            android:text="@string/cashier"
            android:textColor="#4E4D4D"
            android:textSize="17sp" />

        <LinearLayout
            android:id="@+id/btnManageLoaners"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:background="@drawable/rectangle_ripple"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingHorizontal="17dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:src="@drawable/ic_money" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/inter_regular"
                android:text="@string/manage_loaners"
                android:textColor="@color/black"
                android:textSize="17sp" />


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="9dp"
                android:src="@drawable/ic_arrow" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnItemList"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/rectangle_ripple"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingHorizontal="17dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:src="@drawable/ic_list" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/inter_regular"
                android:text="@string/list_of_items"
                android:textColor="@color/black"
                android:textSize="17sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="9dp"
                android:src="@drawable/ic_arrow" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/btnPrintLastReceipt"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/rectangle_ripple"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingHorizontal="17dp">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:src="@drawable/ic_print" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/inter_regular"
                android:text="@string/print_last_receipt"
                android:textColor="@color/black"
                android:textSize="17sp" />

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="52dp"
            android:fontFamily="@font/inter_semi_bol"
            android:paddingVertical="4dp"
            android:text="@string/synchronize"
            android:textSize="15sp"
            app:backgroundTint="#0EAB9D"
            app:cornerRadius="8dp"
            app:icon="@drawable/ic_switch"
            app:iconSize="28dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/inter_semi_bol"
            android:text="@string/it_is_advised_to_sync_at_least_once_per_week"
            android:textColor="#9D9EA0"
            android:textSize="15sp" />

        <LinearLayout
            android:id="@+id/btnLogOut"
            android:layout_width="match_parent"
            android:layout_height="74dp"
            android:layout_marginTop="52dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rectangle_ripple"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_vertical"
            android:paddingHorizontal="17dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:fontFamily="@font/inter_semi_bol"
                android:text="@string/log_out"
                android:textColor="#C82D2D"
                android:textSize="17sp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="9dp"
                android:src="@drawable/ic_arrow" />

        </LinearLayout>


    </LinearLayout>


</ScrollView>